# MachineLearning

./: CMakeLists.txt
MachineLearning/: CMakeLists.txt
MachineLearning/include/: kernels.cuh
MachineLearning/src/: kernels.cu
Test/: CMakeLists.txt  MatmulTest.cu  test_generation.py
